--- a/.github/workflows/Auto_message_on_pr_merge.yml
+++ b/.github/workflows/Auto_message_on_pr_merge.yml
@@ -1,9 +1,8 @@
 name: congratulations  Message on PR merge
 
 on:
-  push:
-    branches:
-      - master
+  pull_request_target:
+    types: [closed]
 
 jobs:
   auto-response:
