--- a/.github/workflows/Auto_message_on_pr_merge.yml
+++ b/.github/workflows/Auto_message_on_pr_merge.yml
@@ -8,6 +8,7 @@ jobs:
   auto-response:
     runs-on: ubuntu-latest
 
+    if: github.event.pull_request.merged == true
     steps:
     - uses: derekprior/add-autoresponse@master
       env:
