--- a/.github/workflows/Auto_message_on_pr_open.yml
+++ b/.github/workflows/Auto_message_on_pr_open.yml
@@ -1,23 +1,21 @@
-name: congratulations  Message on PR merge
+name: Auto message on pr opened
 
 on:
   pull_request_target:
-    types: [closed]
+    types: [opened]
 
 jobs:
   auto-response:
     runs-on: ubuntu-latest
 
-    if: github.event.pull_request.merged == true
     steps:
     - uses: derekprior/add-autoresponse@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         respondableId: ${{ github.event.pull_request.node_id }}
-        response: "Congratulations 🎉🎊, Your PR has been Merged and Thank you @${{ github.event.pull_request.user.login }} for taking out your valuable time in order to contribute to AlgoTree. Looking forward for more such amazing contributions :)"
+        response: "AlgoTree team will review your PR soon. Take Care of Few of the Things where most contributors are missing out. ![msgonpr](https://user-images.githubusercontent.com/73196470/119976078-3a7a5600-bfd4-11eb-9600-502fcbe36ac4.JPG) @${{ github.event.pull_request.user.login }} :)"
         author: ${{ github.event.pull_request.user.login }}
-        
         
         
         
